created new class text for button to reuse styling for home and within modals

--- a/modals.html
+++ b/modals.html
@@ -172,7 +172,7 @@
             <div class="modal-body">
                 <div class="modal-game-over">
                     <p>Continue?</p>
-                    <div class="game-over-ans">
+                    <div class="modal-ans">
                         <button class="continue text">Yes</button>
                         <button class="reset text">No</button>
                     </div>
@@ -184,26 +184,12 @@
         <div class="modal hide" id="gameWonModal" role="dialog">
             <div class="modal-header">
                 <p class="modal-title">Congratulations! 🎉</p>
-                <button class="close" data-dismiss="modal">
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                        fill="none"
-                        class="close"
-                    >
-                        <path
-                            d="M0.311375 15.352V11H3.12738V8.248H5.94338V7.128H3.12738V4.408H0.311375V0.0559998H4.37538V2.808H7.19138V5.496H8.79138V2.808H11.6074V0.0559998H15.7034V4.408H12.8554V7.128H10.0394V8.248H12.8554V11H15.7034V15.352H11.6074V12.632H8.79138V9.88H7.19138V12.632H4.37538V15.352H0.311375Z"
-                            fill="currentColor"
-                        />
-                    </svg>
-                </button>
             </div>
             <div class="modal-body">
                 <div class="modal-game-over">
                     <p>You have reached the goal!</p>
                     <p>Are you interested to go for another round?</p>
-                    <div class="game-over-ans">
+                    <div class="modal-ans">
                         <button class="reset text">Yes</button>
                         <button class="home text">No</button>
                     </div>
