--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 		<div class="homepage">
 			<h1>Reflektor</h1>
 			<div class="home-buttons">
-				<button class="start-button">
+				<button class="start-button text">
 					<a href="./game.html">Start Game</a>
 				</button>
-				<button class="leaderboard">Leaderboard</button>
+				<button class="leaderboard text">Leaderboard</button>
 			</div>
 		</div>
 		<footer class="copyright-text">Copyright text</footer>
