--- a/game.html
+++ b/game.html
@@ -14,9 +14,9 @@
     <body>
         <h1>Reflektor</h1>
         <div class="information-icons">
-            <button class="pause">Pause</button>
-            <button class="leaderboard">Leaderboard</button>
-            <button class="rules">How to Play</button>
+            <button class="information pause">Pause</button>
+            <button class="information leaderboard">Leaderboard</button>
+            <button class="information rules">How to Play</button>
         </div>
         <div class="counters">
             <p class="rounds-title">
