linking between buttons and toggle modal completed

--- a/modals.html
+++ b/modals.html
@@ -41,7 +41,7 @@
         <!-- Modal 2 : Leaderboard -->
         <div class="modal hide" id="leaderboardModal" role="dialog">
             <div class="modal-header">
-                <p class="modal-title"></p>
+                <p class="modal-title">Leaderboard</p>
                 <button class="close" data-dismiss="modal">
                     <svg
                         xmlns="http://www.w3.org/2000/svg"
