--- a/modals.html
+++ b/modals.html
@@ -22,6 +22,7 @@
                         class="close"
                     >
                         <path
+                            class="close"
                             d="M0.311375 15.352V11H3.12738V8.248H5.94338V7.128H3.12738V4.408H0.311375V0.0559998H4.37538V2.808H7.19138V5.496H8.79138V2.808H11.6074V0.0559998H15.7034V4.408H12.8554V7.128H10.0394V8.248H12.8554V11H15.7034V15.352H11.6074V12.632H8.79138V9.88H7.19138V12.632H4.37538V15.352H0.311375Z"
                             fill="currentColor"
                         />
@@ -51,6 +52,7 @@
                         class="close"
                     >
                         <path
+                            class="close"
                             d="M0.311375 15.352V11H3.12738V8.248H5.94338V7.128H3.12738V4.408H0.311375V0.0559998H4.37538V2.808H7.19138V5.496H8.79138V2.808H11.6074V0.0559998H15.7034V4.408H12.8554V7.128H10.0394V8.248H12.8554V11H15.7034V15.352H11.6074V12.632H8.79138V9.88H7.19138V12.632H4.37538V15.352H0.311375Z"
                             fill="currentColor"
                         />
@@ -86,6 +88,7 @@
                         class="close"
                     >
                         <path
+                            class="close"
                             d="M0.311375 15.352V11H3.12738V8.248H5.94338V7.128H3.12738V4.408H0.311375V0.0559998H4.37538V2.808H7.19138V5.496H8.79138V2.808H11.6074V0.0559998H15.7034V4.408H12.8554V7.128H10.0394V8.248H12.8554V11H15.7034V15.352H11.6074V12.632H8.79138V9.88H7.19138V12.632H4.37538V15.352H0.311375Z"
                             fill="currentColor"
                         />
@@ -138,6 +141,7 @@
                         class="close"
                     >
                         <path
+                            class="close"
                             d="M0.311375 15.352V11H3.12738V8.248H5.94338V7.128H3.12738V4.408H0.311375V0.0559998H4.37538V2.808H7.19138V5.496H8.79138V2.808H11.6074V0.0559998H15.7034V4.408H12.8554V7.128H10.0394V8.248H12.8554V11H15.7034V15.352H11.6074V12.632H8.79138V9.88H7.19138V12.632H4.37538V15.352H0.311375Z"
                             fill="currentColor"
                         />
