replace all icons for information

--- a/game.html
+++ b/game.html
@@ -14,9 +14,33 @@
     <body>
         <h1>Reflektor</h1>
         <div class="information-icons">
-            <button class="information pause">Pause</button>
-            <button class="information leaderboard">Leaderboard</button>
-            <button class="information rules">How to Play</button>
+            <button class="information pause">
+                <img
+                    src="./assets/images/information/pause.png"
+                    width="50px"
+                    height="50px"
+                    class="pause"
+                    alt="info : pause"
+                />
+            </button>
+            <button class="information leaderboard">
+                <img
+                    src="./assets/images/information/leaderboard.png"
+                    width="50px"
+                    height="50px"
+                    class="leaderboard"
+                    alt="info : leaderboard"
+                />
+            </button>
+            <button class="information rules">
+                <img
+                    src="./assets/images/information/rules.png"
+                    width="50px"
+                    height="50px"
+                    class="rules"
+                    alt="info : rules"
+                />
+            </button>
         </div>
         <div class="counters">
             <p class="rounds-title">
