--- a/modals.html
+++ b/modals.html
@@ -78,7 +78,14 @@
         <!-- Modal 3 : How To Play (rules) -->
         <div class="modal hide" id="rulesModal" role="dialog">
             <div class="modal-header">
-                <p class="modal-title"></p>
+                <p class="modal-title">
+                    <img
+                        src="./assets/images/information/rules.png"
+                        width="16px"
+                        height="16px"
+                        alt="info : rules"
+                    /> How to play the game?
+                </p>
                 <button class="close" data-dismiss="modal">
                     <svg
                         xmlns="http://www.w3.org/2000/svg"
