replace all available icons with custom-made

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
         <div class="homepage">
             <h1>Reflektor</h1>
             <div class="home-buttons">
-                <button class="start-button text">
-                    <a href="./game.html">Start Game</a>
-                </button>
+                <button class="start text">Start Game
                 <button class="leaderboard text">Leaderboard</button>
             </div>
         </div>
