updated copyright text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <button class="leaderboard text">Leaderboard</button>
             </div>
         </div>
-        <footer class="copyright-text">Copyright text</footer>
+        <footer class="copyright-text">This game is build with FUN in mind by vinnyvaleria.</footer>
         <script>
             // start the game when button is clicked
             function startGame() {
