--- a/game.html
+++ b/game.html
@@ -124,6 +124,8 @@
             </div>
         </div>
         <div id="modal-container" class="hide"></div>
-        <footer class="copyright-text">Copyright text</footer>
+        <footer class="copyright-text">
+            This game is build with FUN in mind by vinnyvaleria.
+        </footer>
     </body>
 </html>
