created separate div to display when screen size is less than 1025px

--- a/game.html
+++ b/game.html
@@ -123,6 +123,18 @@
                 <div class="secondary-grid"></div>
             </div>
         </div>
+        <div class="mobile-support-alert">
+            <p>
+                Hi! Thank you for your interest in the game. We currently only
+                support large screens and desktops with minimum screen width of
+                1025 pixel.
+            </p>
+            <br />
+            <p>
+                Please look forward to our future enhancement for mobile
+                support!
+            </p>
+        </div>
         <div id="modal-container" class="hide"></div>
         <footer class="copyright-text">
             This game is build with FUN in mind by vinnyvaleria.
