--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
         <title>Reflektor (Home)</title>
     </head>
     <body>
+        <h1>Reflektor</h1>
         <div class="homepage">
-            <h1>Reflektor</h1>
             <div class="home-buttons">
                 <button class="start text" onclick="startGame()">Start Game
                 <button class="leaderboard text">Leaderboard</button>
             </div>
+        </div>
+        <div class="mobile-support-alert">
+            <p>
+                Hi! Thank you for your interest in the game. We currently only
+                support large screens and desktops with minimum screen width of
+                1025 pixel.
+            </p>
+            <br />
+            <p>Please look forward to our future enhancement for mobile support!</p>
         </div>
         <footer class="copyright-text">This game is build with FUN in mind by vinnyvaleria.</footer>
         <script>
