updated rules with more details based on available functions

--- a/modals.html
+++ b/modals.html
@@ -153,8 +153,10 @@
                 <div class="modal-rules">
                     <p>
                         The game consists of 2 grids : <br />
-                        Main (left) and Secondary (right)
+                        <span style="color: var(--blue)">Main (left)</span> and
+                        Secondary (right)
                     </p>
+                    <br />
                     <p>
                         Your goal is to move both characters on the Main grid
                         and Secondary grid each to destination X.
@@ -174,7 +176,9 @@
                         </li>
                         <li>
                             If you hit any of the obstacles (brick wall, grass
-                            or big tree), it will be GAME OVER!
+                            or big tree), it will be GAME OVER! <br />(However,
+                            if you decide to continue, it will be counted as an
+                            additional round spent to complete the game)
                         </li>
                         <li>Have fun and be on the leaderboard!</li>
                     </ol>
