--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <footer class="copyright-text">This game is build with FUN in mind by vinnyvaleria.</footer>
         <script>
             // start the game when button is clicked
-            function startGame() {
+            startGame = () => {
                 window.location.href = "game.html"
             }
         </script>
