urgent fix as init is not working in github pages

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="icon" href="./assets/images/icon.png" />
         <link rel="stylesheet" href="./css/main-style.css" />
         <link rel="stylesheet" href="./css/home-style.css" />
+        <script defer src="./js/main.js"></script>
         <title>Reflektor (Home)</title>
     </head>
     <body>
