--- a/modals.html
+++ b/modals.html
@@ -9,6 +9,38 @@
         <title>Reflektor (Modals)</title>
     </head>
     <body style="width: auto; height: auto">
+        <!-- Modal Start -->
+        <div class="modal hide" id="inputModal" role="dialog">
+            <div class="modal-header">
+                <p class="modal-title">Hello there!</p>
+                <button class="close" data-dismiss="modal">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="none"
+                        class="close"
+                    >
+                        <path
+                            class="close"
+                            d="M0.311375 15.352V11H3.12738V8.248H5.94338V7.128H3.12738V4.408H0.311375V0.0559998H4.37538V2.808H7.19138V5.496H8.79138V2.808H11.6074V0.0559998H15.7034V4.408H12.8554V7.128H10.0394V8.248H12.8554V11H15.7034V15.352H11.6074V12.632H8.79138V9.88H7.19138V12.632H4.37538V15.352H0.311375Z"
+                            fill="currentColor"
+                        />
+                    </svg>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="modal-input">
+                    <label for="pname">How should we call you?</label>
+                    <input
+                        type="text"
+                        id="pname"
+                        name="pname"
+                        placeholder="Minimum 3 characters"
+                    />
+                </div>
+            </div>
+        </div>
         <!-- Modal 1 : Pause -->
         <div class="modal hide" id="pauseModal" role="dialog">
             <div class="modal-header">
