remove leaderboard button from homepage temporarily

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="homepage">
             <div class="home-buttons">
                 <button class="start text" onclick="startGame()">Start Game
-                <button class="leaderboard text">Leaderboard</button>
+                <!-- <button class="leaderboard text">Leaderboard</button> -->
             </div>
         </div>
         <div class="mobile-support-alert">
